# ArchiveNote

./: .dockerignore  .gitignore  FEATURES.md
.github/workflows/: docker-image.yml
api/: .env.example  .gitignore  pyproject.toml
api/app/: app.py  database.py  models.py  schemas.py
api/app/routers/: auth.py  files.py  folders.py  notes.py  recycle.py  users.py
api/app/services/: jwt.py  security.py  storage.py  storage_backend.py
api/s3/: upload_file.py
web/: .env.example  README.md  index.html  main.js  package.json  pnpm-lock.yaml  preload.js  vite.config.js
web/src/: App.vue
web/src/api/: apiV1.js  authService.js  fileService.js  folderService.js  noteService.js  recycleService.js
web/src/components/: FileGrid.vue  FileNotes.vue  FilePreview.vue  FileSelector.vue  FileUpload.vue  NavBar.vue  NoteEditor.vue
web/src/router/: index.js
web/src/stores/: auth.js
web/src/styles/: style.css
web/src/utils/: service.js
web/src/views/auth/: LoginView.vue  RegisterView.vue
web/src/views/files/: FilesView.vue  RecycleBinView.vue
web/src/views/index/: HomeView.vue  SearchView.vue
web/src/views/notes/: NotesView.vue
